--- a/src/client/app/shared/navbar/navbar.component.scss
+++ b/src/client/app/shared/navbar/navbar.component.scss
@@ -10,6 +10,7 @@
     .navbar-brand {
         text-transform: uppercase;
         color: $text-color;
+        padding-left: 12px;
     }
 
     .navbar-nav > li > a {
